# baton_mini_sdk_demo

./: CMakeLists.txt  README.md  build_non_ros.sh  package.xml  readme.md  ros_build.sh
include/: baton_cmd.h  baton_mini.h  baton_ros.h
launch/: baton_mini.launch
src/: baton_cmd.cpp  baton_mini.cpp  baton_mini.cpp.bak  baton_ros.cpp
src/sdk/: Base64.cpp  Base64.h  CHttpRequest.cpp  CHttpRequest.h  CommonSocket.cpp  CommonSocket.h  debug.h  image.hpp  image.hpp.bak  image_tcp.hpp  imu copy.hpp  imu.hpp  imu_tcp.hpp  linuxdef.h  odom_tcp.hpp  public.h  stdtostring.h  syslib.cpp  syslib.h  vio_msg.cpp  vio_msg.h  vio_sdk.cpp  vio_sdk.h
